samples/invalid/syntax/reserved_keywords.g
language g0

where = 1
local = \where -> 1
tagged = binary:1
path = root.with
abstract outer.at
